2003-08-20  Per Bothner  <per@bothner.com>

	* test.scm:  Merge in new tests from Aubrey Jaffer's latest version
	of r4rstest.scm.
	* num-test.scm:  6 new tests, mostly from Aubrey Jaffer.

2003-08-09  Per Bothner  <per@bothner.com>

	* classes1.scm (counter, get-new-count, <IdClass1>, <IdClass2>):  New
	Test for Savannah bug #4540.
	* obj-test.scm:  New tests.

	* classes1.scm (default-offset, <DateTest>):  New test, for
	non-simple class with captured context.
	Based on Savannah (non-)bug #4540.
	* obj-test.scm:  New test.

2003-08-01  Per Bothner  <per@bothner.com>

	* HelloCgiX.xql:  Add now-needed xmlspace declaration.

2003-07-22  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm: Test for Savannah bug #4423.

2003-07-21  Per Bothner  <per@bothner.com>

	* gui-test.scm:  Use a button model twice, to test new
	gnu.kawa.models package.

2003-07-16  Per Bothner  <per@bothner.com>

	* module1.scm (my-factorial):  New test case, base of bug reported
	2003-03-19 by Chris.Dean@sokitomi.com.
	* module3.scm, obj-test.scm:  Call my-factorial.

2003-07-15  Chris Dean  <Chris.Dean@sokitomi.com>

	* classes1.scm (<SimpleDateTest>): Add for invoke-special test.
	* obj-test.scm: Test invoke-special with <SimpleDateTest> class.

2003-07-15  Chris Dean  <Chris.Dean@sokitomi.com>

	* arr-test.scm: Test for Savannah [bug #4310] share-array edge case

2003-07-14  Joerg Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* misc-test.scm: New test - for bug with makeBuiltinUnary.

	* misc-test.scm: New call-with-values test.

2003-07-12  Chris Dean  <Chris.Dean@sokitomi.com>

	* module3.scm: Added functions to test compile time bug of
    	primitive-array-*, Savannah bug #4289
	* obj-test.scm: Test the primitive-array-* functions.

2003-07-11  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm:  New test for 'fluid-let' with 'future'.

2003-07-10  Chris Dean  <Chris.Dean@sokitomi.com>

	* mac-test.scm:  New test for Keyword among syntax-rules literals.
